<resources>
    <string name="app_name">Aposentadoria</string>
    <string name="titulo">Cálculo de Aposentadoria</string> <!-- conferir-->
    <string name="idade">Idade</string>
    <string name="requerido">Requerido</string>
    <string name="genero">Gênero</string> <!-- conferir-->
    <string name="calcular">CALCULAR</string>
    <string name="nome">Matheus Duarte Pimenta</string>
    <string name="ja_aposentado">Você já deveria estar aposentado.</string>
    <string name="tempo_restante">Faltam %1$d anos para a aposentadoria.</string>
    <string-array name="opcoes_genero">
        <item>Feminino</item>
        <item>Masculino</item>
    </string-array>
</resources>